Fixed padding on mobile in about text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -456,8 +456,8 @@ p {
 
 @media (max-width: 900px) {
   .custom-px {
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
